--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+@import 'primereact/resources/themes/lara-light-blue/theme.css' layer(primereact);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer tailwind-base, primereact, tailwind-utilities;
+
+
 
